常にValidなドメインを生成するように変更